# pylibfacedetection

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  setup.py  tox.ini
pylibfacedetection/: __init__.py
src/: facedetector.cpp  facedetector.h  main.cpp
tests/: requirements.txt
